---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 02. 14. 2021

  Features:
    - Added new mod setting to toggle enhanced vanilla defenses, enabled by default
    - Buff car health (750), resistance and damage (1.5x).
    - Buff tank resistances and damage (2x).
    - Buff stone wall health (500) and resistances.
    - Buff spidertron resistance.
    - Buff impact resistance for all vehicles to 90/50.
    - Buff bot health from 100 to 200, resistances to 75%

  Changes:
    - Gun turret HP buff now controls with enhance vanilla defenses setting.
    - Armors resistances buff now controls with enhance vanilla defenses setting.
    - Explosive rockets AOE can now hit air
    - Units are fully heal in 2 minutes.
    - Buildings are fully heal in 5 minutes.

  Bugfixes:
    - Fix existing enemies are wiped when the level difficulty setting changed from higher to lower for an existing save.
    - Z and P are required to update 1.3.0 for above bugfix to work.

---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 02. 02. 2021

  Changes:
    - Change max unit attack range for default to 14.  So that gun turrets can hit them with 2 layers of walls.

---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 31. 01. 2021

  Features:
    - Add an option to select max unit attack range for units that uses maximum range. Default is 16. Advanced is 20.

  Changes:
    - Early game leveling should be a lot slower now.
    - Change level 2 and 3's evolution factor value. {0.4, 0.8}
    - Change level 4 and 5 base on hidden evolution value.
    - New hidden evolution level values are {40, 80, 120, 160, 200, 250, 300, 350, 400, 500, 600, 700, 900, 1100, 1350, 1750, 2500}
    - Change Armor resistances to resists all damage types.
    - Buff gun turret HP from 400 to 800.
